--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Api de demos en GraphQL",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Bombe software",
   "license": "ISC",
