--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
+    "express-session": "^1.15.6",
     "graphql": "^0.12.3",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.9",
-    "nodemon": "^1.14.10"
+    "nodemon": "^1.14.10",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0"
   }
-} 
+}
