--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express-graphql": "^0.6.11",
     "express-session": "^1.15.6",
     "graphql": "^0.12.3",
-    "lodash": "^4.17.4",
-    "mongoose": "^5.0.2",
-    "nodemon": "^1.14.11",
+    "graphql-subscriptions": "^0.5.6",
+    "lodash": "^4.17.5",
+    "mongoose": "^5.0.3",
+    "nodemon": "^1.14.12",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "subscriptions-transport-ws": "^0.9.5"
   }
 }
