--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chalk": "^2.3.0",
     "connect-mongo": "^2.0.1",
     "cors": "^2.8.4",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "express-session": "^1.15.6",
