Confirmacion de email completo

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-upload-server": "^4.0.2",
     "axios": "^0.17.1",
+    "big-integer": "^1.6.26",
     "chalk": "^2.3.0",
     "connect-mongo": "^2.0.1",
     "cors": "^2.8.4",
