--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   "license": "ISC",
   "dependencies": {
     "apollo-upload-server": "^4.0.2",
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "big-integer": "^1.6.26",
-    "chalk": "^2.3.0",
+    "chalk": "^2.3.1",
     "connect-mongo": "^2.0.1",
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
-    "express-graphql": "^0.6.11",
+    "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
-    "graphql": "^0.12.3",
-    "graphql-subscriptions": "^0.5.6",
+    "graphql": "^0.13.1",
+    "graphql-subscriptions": "^0.5.8",
     "lodash": "^4.17.5",
-    "mongoose": "^5.0.3",
-    "nodemon": "^1.14.12",
+    "mongoose": "^5.0.7",
+    "node-wit": "^5.0.0",
+    "nodemon": "^1.15.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "subscriptions-transport-ws": "^0.9.5"
+    "subscriptions-transport-ws": "^0.9.6"
   }
 }
