--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.16.2",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
+    "file-system": "^2.2.2",
+    "form-data": "^2.3.2",
     "graphql": "^0.13.1",
     "graphql-subscriptions": "^0.5.8",
     "lodash": "^4.17.5",
